<resources>
    <string name="app_name">My Application</string>
    <string name="profile_title">Profil de l\'Ing\énieur</string>
    <string name="general_info">Informations G\én\érales</string>
    <string name="name">Nom:</string>
    <string name="surname">Pr\énom:</string>
    <string name="enter_name">Entrez votre nom</string>
    <string name="enter_surname">Entrez votre pr\énom</string>
    <string name="email">E-mail:</string>
    <string name="age">Age:</string>
    <string name="enter_email">Entrez votre adresse e-mail</string>
    <string name="enter_age">Entrer l\'age</string>
    <string name="filiere">Fili\ère</string>
    <string name="enter_filiere">Entrez la fili\ère</string>
    <string name="stage_button">Stage</string>
    <string name="competences_button">Comp\étences Linguistiques</string>
    <string name="formations">Formations</string>
    <string name="diplome_button">Dipl\ôme</string>
    <string name="experiences">Exp\ériences</string>
    <string name="technical_skills">Comp\étences Techniques</string>
    <string name="interests">Centres d\'Int\ér\êts</string>
    <string name="formations_button">Vers Formations</string>
    <string name="experiences_button">G\érer Exp\ériences</string>
    <string name="technical_skills_button">G\érer Comp\étences Techniques</string>
    <string name="interests_button">G\érer Centres d\'Int\ér\êts</string>
    <string name="Retour_Profil">Retour</string>
    <!--     Formation  -->
    <string name="libelle_label">Libell\é:</string>
    <string name="enter_libelle">Entrez le libell\é</string>
    <string name="annee_label">Annee:</string>
    <string name="enter_annee">Entrez l\'ann\ée</string>
    <string name="institue_label">Institut:</string>
    <string name="enter_institue">Entrez l\'institut</string>
    <string name="retour">Retour</string>
    <string name="aller_diplome">vers diplome</string>

<!--   experience  -->

    <string name="poste_label">Poste:</string>
    <string name="enter_poste">Entrez le poste</string>

    <string name="entreprise_label">Entreprise:</string>
    <string name="enter_entreprise">Entrez l\'entreprise</string>

    <string name="duree_label">Dur\ée:</string>
    <string name="enter_duree">Entrez la dur\ée</string>



</resources>