
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtfromation"
            android:layout_width="353dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/libelle_label"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtLibelle"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_libelle"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/annee_label"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtAnnee"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_annee"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/institue_label"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtInstitue"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_institue"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
