<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtExperience"
            android:layout_width="353dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/poste_label"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtPoste"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_poste"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:minHeight="48dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/entreprise_label"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtEntreprise"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_entreprise"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:minHeight="48dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/duree_label"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtDuree"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_duree"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:minHeight="48dp"
            android:padding="8dp"/>
    </LinearLayout>

</LinearLayout>
